0.0.1/index.md
# Home

MTHDS is an open standard for defining, packaging, and distributing AI methods. It gives you a typed language for composable AI methods — a way to describe what an AI should do, with what inputs, producing what outputs, in files that humans and machines can read.

The standard has two pillars. **The Language** lets you define typed data and transformations in `.mthds` files — plain text, version-controllable, readable by anyone on the team. A single file works on its own, no setup required. **The Package System** adds distribution: give your methods an identity, declare dependencies, control visibility, and share them across projects and organizations.

<div class="grid cards" markdown>

-   **Set Up Your Editor**

    Install the VS Code / Cursor extension for syntax highlighting, validation, and autocomplete.

    [:octicons-arrow-right-24: Editor Support](tooling/editor-support.md)

-   **Learn the Language**

    Concepts, pipes, domains — everything you need to write `.mthds` files.

    [:octicons-arrow-right-24: The Language](language/bundles.md)

-   **Read the Specification**

    The normative reference for file formats, validation rules, and resolution algorithms.

    [:octicons-arrow-right-24: Specification](spec/mthds-format.md)

-   **Get Started**

    Write your first method in a few steps.

    [:octicons-arrow-right-24: Write Your First Method](getting-started/first-method.md)

</div>
